fixed the alignment to left

--- a/src/cljs/webchange/editor_v2/activity_form/common/object_form/image_form/styles.scss
+++ b/src/cljs/webchange/editor_v2/activity_form/common/object_form/image_form/styles.scss
@@ -1,7 +1,7 @@
 .image-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: left;
     gap: 32px;
 
     .preview {
